--- a/JDBC_Authentication/src/main/resources/application.properties
+++ b/JDBC_Authentication/src/main/resources/application.properties
@@ -6,5 +6,4 @@ spring.datasource.password=root
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 #spring.jpa.hibernate.ddl-auto=update
 
-#logging.level.org.springframework=debug
-
+logging.level.org.springframework=debug
